    + Download mamexxxs.exe, smaller than mamexxxs.zip
  * debian/rules:
    + Unset BUILD_MIDILIB flag to allow linking system Portmidi library
    + Removed trailing CR stripping, not needed any more by gcc/g++/patch
    + Reworked get-orig-source for main mame tarball
  * Removed mess-related man pages, accepted upstream
  * Updated history.dat references: tarball filename changed upstream

 -- Cesare Falco <c.falco@ubuntu.com>  Tue, 22 Jan 2013 21:33:53 +0100

mame (0.147-2) UNRELEASED; urgency=low

  [ Jordi Mallach ]
  * Fix mame-extra's description.
  * Add necessary Breaks/Replaces for the nplayers.ini move to mame-extra.

  [ Emmanuel Kasper ]
  * Removing -mtune=generic build options: optimizing gain is minimal
    and segfault on i386 may occured if we use it

 -- Jordi Mallach <jordi@debian.org>  Tue, 08 Jan 2013 00:40:39 +0100

mame (0.147-1) experimental; urgency=low

  [ Cesare Falco ]
  * New upstream release
  * Updated quilt patches
  * Removed all transitional packages related to xmame and sdlmame
  * Mess source imported in Mame project; packages merged accordingly
  * mame.ini:
    - pointed hash- and ctrlrpath entries to mess-data directories
  * mess.ini:
    - added uimodekey entry (default doesn't work)
  * New mame-extra packages for additional files:
    - nplayers.ini (moved from mame)
    - history.dat (new)
  * debian/copyright:
    - added history file
    - various fixes
  * debian/rules:
    - Removed duplicate NOWERROR make variable in debian/rules
    - Changelogs removed upstream
    - Added targets for Mess and tools
    - get-orig-source:
      + retrieve .exe, significantly smaller than .zip
      + added rules for history file
  * debian/watch: added history file

  [ Jon Dowland ]
  * Remove deprecated dm-upload-allowed from the control file.

  [ Emmanuel Kasper ]
  * Remove Felix and Ludo from Uploaders, following request in private mail.
  * Bump Standards-Version to 3.9.4

  [ Jordi Mallach ]