@@ -1,1 +1,2 @@
-docs/*
+docs/config.txt
+docs/mame.txt
